--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,8 +164,8 @@ ul.navbar-nav a {
 }
 
 .gambar_footer {
-	height: 180px;
-	width: 80%;
+	height: 350px;
+	width: 100%;
 }
 
 .logo {
@@ -330,4 +330,33 @@ footer {
 		margin-top: 5px;
 		margin-bottom: 5px;
 	}
+}
+
+
+
+/* halaman menu */
+.jumbotron {
+	height: 500px;
+	background-color: rgb(248, 248, 248);
+}
+
+.logo_jumbotron {
+	height: 400px;
+	width: 100%;
+}
+
+#text_jumbotron {
+	padding-top: -50px;
+	font-family: 'Times New Roman', Times, serif;
+	color: rgb(201, 114, 0);
+}
+
+.gambar_jumbotron {
+	height: 525px;
+	width: 100%;
+}
+
+.gambar_menu {
+	height: 300px;
+	width: 100%;
 }
