--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,12 @@ ul.navbar-nav a {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+.carousel-caption p {
+	color: white;
+	font-size: 26px;
+	font-weight: bolder;
+}
+
 .carousel-caption a:hover {
 	color: black;
 	width: 230px;
@@ -360,3 +366,23 @@ footer {
 	height: 300px;
 	width: 100%;
 }
+
+/* akhir halaman menu */
+
+/* halaman promo */
+#promo {
+	margin-left: 8px;
+	margin-top: 100px;
+}
+
+#promo_title {
+	font-weight: bolder;
+	font-family: 'Times New Roman', Times, serif;
+}
+
+#promo_alert {
+	font-family: 'Courier New', Courier, monospace;
+	font-weight: bolder;
+}
+
+/* akhir halaman promo */
