--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,3 +386,90 @@ footer {
 }
 
 /* akhir halaman promo */
+
+
+/* halaman sejarah */
+#sejarah {
+	color: goldenrod;
+}
+
+.text_visiMisi {
+	font-size: 18px;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+/* akhir halaman sejarah */
+
+
+/* halaman karir */
+#karir_body {
+	margin-top: 100px;
+}
+
+#karir_body h1 {
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#karir_body p {
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-size: 18px;
+	margin-bottom: 50px;
+}
+
+.card-deck .card img {
+	width: 100%;
+	height: 200px;
+}
+
+#karir_footer {
+	height: 400px;
+}
+
+.col-lg-6 img {
+	height: 400px;
+}
+
+#karir_footer h1 {
+	padding-top: 60px;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#karir_footer button {
+	width: 100px;
+	font-size: larger;
+}
+
+#karir_footer button:hover {
+	width: 100px;
+	font-size: 20px;
+	box-shadow: 3px 3px #888888;
+	font-weight: 700;
+}
+
+/* akhir halaman karir */
+
+
+/* hubungi kami */
+#contact h2 {
+	font-size: 34px;
+	/* font-weight: bolder; */
+	text-align: center;
+	margin-bottom: 20px;
+	font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+#gambar_contact img {
+	height: 500px;
+}
+
+#gambar_contact p {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 18px;
+	font-weight: 400;
+}
+
+.form-group .col-sm-10 select {
+	box-shadow: 3px 3px #f7f7f7;
+}
+
+/* akhir hubungi kami */
