membuat animasi pada setiap halaman

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,6 +341,10 @@ footer {
 
 
 /* halaman menu */
+#jumbotron_menu img {
+	height: 525px;
+}
+
 .jumbotron {
 	height: 500px;
 	background-color: rgb(248, 248, 248);
