membuat database company profile dan table_users serta membuat fungsi insert untuk registrasi

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,11 @@ ul.navbar-nav a {
 	width: 140px;
 }
 
+/* modal daftar */
+.gambar_daftar {
+	height: 330px;
+}
+
 /* akhir modal */
 
 /* loker */
