--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ ul.navbar-nav a {
 
 /* Atas footer */
 #atas_footer {
-	height: 400px;
+	height: 300px;
 }
 
 .list_about {
@@ -271,8 +271,13 @@ footer {
 		font-size: 14px;
 	}
 
+	.btn_menu {
+		text-align: center;
+		margin-left: 50px;
+	}
+
 	#atas_footer {
-		margin-top: 330px;
+		margin-top: 250px;
 	}
 
 	#row_logo .col-lg-3 {
@@ -286,17 +291,57 @@ footer {
 
 	#email {
 		position: relative;
-		/* margin-bottom: 400px; */
 	}
 
 	footer {
-		margin-top: 300px;
+		margin-top: 320px;
 		padding-bottom: 15px;
 	}
 
 	#pt_suryadi {
 		text-align: center;
 	}
+
+	/* halaman menu */
+	#minuman {
+		margin-bottom: -300px;
+	}
+
+	/* halaman hubungi kami */
+
+	#contact {
+		margin-bottom: -340px;
+	}
+
+	#contact img {
+		background-size: cover;
+		width: 330px;
+	}
+
+	#contact h2,
+	p {
+		width: 300px;
+		padding-right: 20px;
+	}
+
+	#card_hub_kami {
+		margin-top: 800px;
+		width: 280px;
+		margin-left: -160px;
+	}
+
+	#card_hub_kami input {
+		font-size: 12px;
+	}
+
+	#card_hub_kami select {
+		font-size: 12px;
+	}
+
+	#card_hub_kami textarea {
+		font-size: 12px;
+	}
+
 }
 
 /* tab */
@@ -311,6 +356,11 @@ footer {
 
 	.btn_carousel_daftar {
 		margin-left: -10px;
+		margin-bottom: 100px;
+	}
+
+	.btn_carousel_masuk {
+		margin-bottom: 100px;
 	}
 
 
@@ -329,12 +379,20 @@ footer {
 		margin-right: 4px;
 	}
 
+	.btn_menu {
+		background-color: red;
+		display: block;
+		width: 140px;
+		font-size: 14px;
+		margin-right: 5px;
+	}
+
 	.card-body h5 {
 		text-align: center;
 	}
 
 	#atas_footer {
-		margin-top: 230px;
+		margin-top: 150px;
 	}
 
 	#row_logo .col-lg-3 {
@@ -347,14 +405,41 @@ footer {
 	}
 
 	footer {
-		margin-top: 300px;
-		padding-bottom: 15px;
+		margin-top: 330px;
+		padding-bottom: 20px;
 	}
 
 	#pt_suryadi {
 		text-align: center;
 		margin-top: 5px;
 		margin-bottom: 5px;
+	}
+
+	/* halaman menu */
+	#minuman {
+		margin-bottom: -200px;
+	}
+
+	/* halaman hubungi kami */
+	#contact {
+		margin-bottom: -220px;
+	}
+
+	#contact img {
+		background-size: cover;
+		width: 780px;
+	}
+
+	#contact h2,
+	p {
+		width: 700px;
+		padding-right: 50px;
+	}
+
+	#card_hub_kami {
+		margin-top: 670px;
+		width: 660px;
+		margin-left: -360px;
 	}
 }
 
@@ -389,6 +474,21 @@ footer {
 .gambar_menu {
 	height: 300px;
 	width: 100%;
+}
+
+.btn_menu {
+	background-color: rgb(228, 0, 0);
+	width: 150px;
+	color: white;
+	outline: none;
+}
+
+.btn_menu:hover {
+	width: 150px;
+	font-weight: bold;
+	color: white;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	outline: none;
 }
 
 /* akhir halaman menu */
