--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,12 +303,19 @@ footer {
 	}
 
 	/* halaman menu */
+	#jumbotron_menu h3 {
+		margin-top: 30px;
+	}
+
+	#jumbotron_menu #slider_menu img {
+		height: 430px;
+	}
+
 	#minuman {
-		margin-bottom: -300px;
+		margin-bottom: -200px;
 	}
 
 	/* halaman hubungi kami */
-
 	#contact {
 		margin-bottom: -340px;
 	}
@@ -342,6 +349,91 @@ footer {
 		font-size: 12px;
 	}
 
+	/* halaman karir */
+	#jumbotron_karir {
+		margin-bottom: -70px;
+	}
+
+	#jumbotron_karir img {
+		margin-top: 20px;
+		width: 100%;
+		height: 447px;
+	}
+
+	#karir_body {
+		padding-left: 20px;
+	}
+
+	#karir_body .card-deck .card {
+		margin-right: 20px;
+	}
+
+	#karir_body .card-deck .card p {
+		padding-right: 80px;
+	}
+
+	#karir_footer {
+		margin-bottom: 300px;
+	}
+
+	#karir_footer img {
+		margin-bottom: -90px;
+	}
+
+	#daftar_karir {
+		width: 360px;
+	}
+
+	/* akhir halaman karir */
+
+	/* halaman layanan */
+	#layanan_body h1 {
+		margin-top: -20px;
+	}
+
+	#layanan_body .card-deck {
+		margin-top: 30px;
+	}
+
+	#layanan_body {
+		margin-bottom: -300px;
+	}
+
+	/* akhir halaman layanan */
+
+	#visi p {
+		width: 350px;
+	}
+
+	#misi p {
+		width: 350px;
+	}
+
+	#sejarah p {
+		width: 350px;
+	}
+
+	#sejarah {
+		margin-bottom: -270px;
+	}
+
+	/* akhir halaman sejarah */
+
+	/* halaman login */
+	#login {
+		margin-bottom: -270px;
+	}
+
+	/* akhir halaman login */
+
+	/* halaman registrasi */
+	#registrasi {
+		margin-bottom: -270px;
+	}
+
+	/* akhir halaman registrasi */
+
+	/* akhir media query smartphone */
 }
 
 /* tab */
@@ -441,8 +533,75 @@ footer {
 		width: 660px;
 		margin-left: -360px;
 	}
-}
 
+	/* akhir hubungi kami */
+
+	/* halaman karir */
+	#jumbotron_karir img {
+		height: 530px;
+	}
+
+	#karir_body {
+		margin-top: -500px;
+	}
+
+	#karir_body .card-deck .card {
+		width: 80px;
+	}
+
+	#karir_body .card-deck .card p {
+		width: 200px;
+	}
+
+	#karir_footer {
+		margin-bottom: 300px;
+	}
+
+	/* akhir halaman karir */
+
+	/* awal halaman layanan kami */
+	#layanan_body .card-deck {
+		margin-top: 100px;
+		margin-bottom: -200px;
+	}
+
+	/* akhir layanan kami */
+
+	/* awal halaman tentang_kammi */
+	#visi p {
+		width: 740px;
+	}
+
+	#misi p {
+		width: 740px;
+	}
+
+	#sejarah p {
+		width: 740px;
+	}
+
+	#sejarah {
+		margin-bottom: -170px;
+	}
+
+	/* akhir halaman tentang kami */
+
+	/* halaman login */
+	#login {
+		margin-bottom: -170px;
+	}
+
+	/* akhir halaman login */
+
+	/* halaman registrasi */
+	#registrasi {
+		margin-bottom: -170px;
+	}
+
+	/* akhir halaman registrasi */
+
+	/* akhir media query tab */
+}
 
 
 /* halaman menu */
