--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,17 @@
 /* navbar */
+#btn_login {
+	position: fixed;
+	left: 190px;
+	top: 8px;
+}
+
+#home .dropdown-menu {
+	position: relative;
+	left: 70px;
+	top: 30px;
+	text-align: center;
+}
+
 .gold {
 	color: goldenrod;
 	font-weight: bolder;
@@ -8,7 +21,6 @@
 	color: goldenrod;
 	font-weight: bolder;
 }
-
 
 .garis_vertikal {
 	color: goldenrod;
@@ -26,7 +38,7 @@ ul.navbar-nav a {
 
 
 /* slider */
-.carousel-inner .carousel-item img {
+.slide {
 	height: 800px;
 	background-size: cover;
 }
@@ -89,6 +101,8 @@ ul.navbar-nav a {
 }
 
 .carousel-indicators li {
+	position: relative;
+	bottom: 220px;
 	width: 40px;
 	height: 10px;
 	background-color: goldenrod;
@@ -98,6 +112,7 @@ ul.navbar-nav a {
 
 /* rekomendasi */
 #rekomendasi {
+	margin-top: -180px;
 	margin-left: 30px;
 	margin-right: 30px;
 }
@@ -248,12 +263,9 @@ footer {
 	position: relative;
 	height: 38px;
 	top: 60px;
-
 }
 
 /* akkhir footer */
-
-
 
 #kebijakan,
 #syarat {
@@ -322,14 +334,13 @@ footer {
 	outline: none;
 }
 
-
 /* akhir halaman menu */
-
 
 /* halaman outlet */
 #jumbotron_outlet img {
 	height: 400px;
 	width: 100%;
+	margin-top: 10px;
 }
 
 #jumbotron_outlet h2 {
@@ -346,6 +357,7 @@ footer {
 	margin-left: 8px;
 	margin-top: 60px;
 	height: 257px;
+	margin-top: 100px;
 }
 
 #promo_title {
@@ -562,10 +574,37 @@ h3 {
 
 /* smartphone */
 @media (max-width:575.98px) {
+	#home .navbar-brand {
+		font-size: 16px;
+		position: relative;
+		bottom: 10px;
+		right: 18px;
+	}
+
+	#home .dropdown-menu {
+		position: fixed;
+		font-size: 12px;
+		left: 140px;
+		top: 4px;
+		text-align: center;
+		min-width: 5px;
+	}
+
+	#btn_login {
+		position: fixed;
+		left: 20px;
+		top: 25px;
+	}
+
+	#btn_login i {
+		visibility: hidden;
+	}
+
 	.garis_vertikal {
 		visibility: hidden;
 	}
 
+	/* carousel */
 	.carousel-item img {
 		height: 460px;
 		margin-top: 40px;
@@ -573,7 +612,7 @@ h3 {
 	}
 
 	.carousel-caption h1 {
-		font-size: 36px;
+		font-size: 28px;
 		position: relative;
 		bottom: 20px;
 		text-align: center;
@@ -590,7 +629,15 @@ h3 {
 		position: relative;
 		bottom: 30px;
 		width: 100px;
-		right: 50px;
+		height: 40px;
+		font-size: 16px;
+		right: 25px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+		/* min-height: 100vh; */
 	}
 
 	.carousel-inner:hover .btn_carousel_daftar:hover {
@@ -605,28 +652,62 @@ h3 {
 		position: relative;
 		bottom: 30px;
 		width: 100px;
-		/* left: 30px; */
+		height: 40px;
+		font-size: 16px;
+		left: 25px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+		/* min-height: 100vh; */
+	}
+
+	.carousel-inner .logout {
+		position: absolute;
+		top: 0;
+		bottom: 270px;
+		left: 0;
+		right: 0;
+		margin: auto;
 	}
 
 	.carousel-control-prev-icon {
 		width: 20px;
 		position: relative;
 		right: 15px;
+		bottom: 120px;
 	}
 
 	.carousel-control-next-icon {
 		width: 20px;
 		position: relative;
 		left: 15px;
+		bottom: 120px;
 	}
 
 	ol li {
 		margin-top: -110px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+		min-height: 1vh;
+	}
+
+	/* sweet alert */
+	.swal2-popup {
+		max-width: 300px !important;
+		max-height: 340px !important;
+		font-size: 12px !important;
 	}
 
 	#rekomendasi {
-		margin-top: -100px;
+		position: relative;
+		bottom: 120px;
 	}
+
 
 	.btn_rekomendasi {
 		width: 100%;
@@ -707,9 +788,50 @@ h3 {
 		margin-bottom: -200px;
 	}
 
+	/* halaman csr */
+	#csr_body .kontribusi {
+		bottom: 270px;
+		position: relative;
+		font-size: 20px;
+		text-align: center;
+
+	}
+
+	#csr_body .kontribusi_text {
+		bottom: 270px;
+		position: relative;
+		font-size: 16px;
+		text-align: center;
+	}
+
+	.jenis_kegiatan h1 {
+		bottom: 80px;
+		position: relative;
+		font-size: 20px;
+		text-align: center;
+	}
+
+	.jenis_kegiatan .card {
+		bottom: 80px;
+		position: relative;
+		font-size: 20px;
+		text-align: center;
+	}
+
+	.jenis_kegiatan .card .card-body p {
+		font-size: 16px;
+		text-align: justify;
+		margin-right: 15px;
+	}
+
+
+	/* akhir halaman csr */
+
 	/* halaman hubungi kami */
-	#contact {
-		margin-bottom: -340px;
+	#hubungi_title {
+		margin-top: 30px;
+		font-weight: bolder;
+		font-family: 'Times New Roman', Times, serif;
 	}
 
 	#contact img {
@@ -830,6 +952,50 @@ h3 {
 
 /* tab */
 @media (min-width: 576px) and (max-width: 991.98px) {
+
+	/* carousel */
+	nav {
+		min-height: 80px;
+		float: left;
+	}
+
+	/* navbar */
+	#home .navbar-brand {
+		font-size: 20px;
+		position: fixed;
+		top: 10px
+	}
+
+	#btn_login {
+		position: fixed;
+		left: 60px;
+		top: 40px;
+		font-size: 18px;
+	}
+
+	#home .dropdown-menu {
+		position: fixed;
+		font-size: 16px;
+		left: 200px;
+		top: 4px;
+		text-align: center;
+		min-width: 5px;
+	}
+
+	#btn_login i {
+		visibility: hidden;
+	}
+
+	/* .btn_navbarNav {
+		position: fixed;
+	} */
+
+	#navbarNav {
+		margin-top: 50px;
+		margin-left: 20px;
+		font-size: 20px;
+	}
+
 	.garis_vertikal {
 		visibility: hidden;
 	}
@@ -849,23 +1015,67 @@ h3 {
 
 	.btn_carousel_daftar {
 		position: relative;
-		bottom: 10px;
-		right: 100px;
+		bottom: 25px;
+		right: 40px;
+		width: 20px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
 	}
 
 	.btn_carousel_masuk {
 		margin-bottom: 100px;
 		position: relative;
-		bottom: 10px;
-		left: 20px;
+		bottom: 25px;
+		width: 20px;
+		left: 40px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+	}
+
+	.carousel-inner .logout {
+		position: absolute;
+		bottom: 120px;
+		left: 0;
+		right: 0;
+		margin: auto;
 	}
 
 	ol li {
-		margin-top: -120px;
+		position: relative;
+		margin-top: -100px;
+		/* bottom: 300px; */
+	}
+
+	.carousel-control-prev-icon {
+		width: 35px;
+		position: relative;
+		right: 15px;
+		bottom: 120px;
+	}
+
+	.carousel-control-next-icon {
+		width: 35px;
+		position: relative;
+		left: 15px;
+		bottom: 120px;
+	}
+
+	/* sweet alert */
+	.swal2-popup {
+		max-width: 400px !important;
+		max-height: 340px !important;
+		font-size: 16px !important;
 	}
 
 	#rekomendasi {
-		margin-top: -90px;
+		position: relative;
+		bottom: 110px;
 	}
 
 	.btn_rekomendasi {
@@ -883,15 +1093,22 @@ h3 {
 	}
 
 	.btn_menu {
-		width: 100%;
-		font-size: 14px;
+		width: 75px;
+		font-size: 16px;
+		position: absolute;
+		top: -30px;
+		height: 40px;
+		left: 0;
+		right: 0;
+		margin: auto;
 	}
 
 	.btn_menu:hover {
-		width: 100%;
-		height: 70%;
+		position: absolute;
+		width: 75px;
+		height: 40px;
 		padding-top: 9px;
-		font-size: 12px;
+		font-size: 14px;
 		outline: none;
 		font-weight: lighter;
 	}
@@ -948,7 +1165,7 @@ h3 {
 
 	/* halaman menu */
 	#jumbotron_menu h3 {
-		margin-top: -140px;
+		margin-top: -130px;
 		font-size: 28px;
 	}
 
@@ -962,8 +1179,10 @@ h3 {
 	}
 
 	/* halaman hubungi kami */
-	#contact {
-		margin-bottom: -220px;
+	#hubungi_title {
+		margin-top: 40px;
+		font-weight: bolder;
+		font-family: 'Times New Roman', Times, serif;
 	}
 
 	#contact img {
@@ -991,7 +1210,7 @@ h3 {
 	}
 
 	#karir_body {
-		margin-top: -500px;
+		margin-top: -30px;
 	}
 
 	#karir_body .card-deck .card {
@@ -1007,6 +1226,38 @@ h3 {
 	}
 
 	/* akhir halaman karir */
+
+	/* halaman csr */
+	#csr_body .kontribusi {
+		position: relative;
+		bottom: 400px;
+		text-align: center;
+	}
+
+	#csr_body .kontribusi_text {
+		position: relative;
+		bottom: 400px;
+		text-align: center;
+	}
+
+	#csr_body .jenis_kegiatan h1 {
+		position: relative;
+		bottom: 200px;
+		text-align: center;
+	}
+
+	#csr_body .jenis_kegiatan .card {
+		position: relative;
+		bottom: 200px;
+		text-align: center;
+	}
+
+	#csr_body .jenis_kegiatan .card p {
+		width: 200px;
+		text-align: center;
+	}
+
+	/* akhir halamn csr */
 
 	/* awal halaman layanan kami */
 	#layanan_body .card-deck {
@@ -1037,8 +1288,8 @@ h3 {
 
 	/* halaman login */
 	#login {
-		/* margin-bottom: -170px; */
 		height: 650px;
+		max-width: 600px;
 	}
 
 	/* akhir halaman login */
