--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -581,11 +581,15 @@ h3 {
 		right: 18px;
 	}
 
+	#home button {
+		margin-left: 15px;
+	}
+
 	#home .dropdown-menu {
 		position: fixed;
 		font-size: 12px;
 		left: 140px;
-		top: 4px;
+		top: 20px;
 		text-align: center;
 		min-width: 5px;
 	}
@@ -615,29 +619,33 @@ h3 {
 		font-size: 28px;
 		position: relative;
 		bottom: 20px;
-		text-align: center;
+		/* text-align: center; */
+		position: relative;
+		left: 3%;
+		transform: translateX(-50%);
 	}
 
 	.carousel-caption p {
 		font-size: 18px;
 		position: relative;
 		bottom: 20px;
-		right: 15px;
+		position: relative;
+		left: 55%;
+		transform: translateX(-50%);
 	}
 
 	.carousel-inner .btn_carousel_daftar {
 		position: relative;
 		bottom: 30px;
-		width: 100px;
-		height: 40px;
+		width: 80px;
+		height: 30px;
 		font-size: 16px;
-		right: 25px;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
 		text-align: center;
-		/* min-height: 100vh; */
+		padding: 0;
+		display: inline-block;
+		line-height: 30px;
+		text-align: center;
+
 	}
 
 	.carousel-inner:hover .btn_carousel_daftar:hover {
@@ -651,16 +659,15 @@ h3 {
 	.carousel-inner .btn_carousel_masuk {
 		position: relative;
 		bottom: 30px;
-		width: 100px;
-		height: 40px;
+		/* left: 10px; */
+		width: 80px;
+		height: 30px;
 		font-size: 16px;
-		left: 25px;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
 		text-align: center;
-		/* min-height: 100vh; */
+		padding: 0;
+		display: inline-block;
+		line-height: 30px;
+		text-align: center;
 	}
 
 	.carousel-inner .logout {
@@ -687,13 +694,16 @@ h3 {
 	}
 
 	ol li {
-		margin-top: -110px;
+		/* margin-top: -110px; */
+		position: relative;
+		top: -280px;
 		display: flex;
-		flex-direction: column;
+		/* flex-direction: column; */
 		justify-content: center;
 		align-items: center;
-		text-align: center;
-		min-height: 1vh;
+		text-align: justify;
+		/* margin: auto */
+		/* min-height: 1vh; */
 	}
 
 	/* sweet alert */
@@ -707,7 +717,6 @@ h3 {
 		position: relative;
 		bottom: 120px;
 	}
-
 
 	.btn_rekomendasi {
 		width: 100%;
@@ -739,11 +748,24 @@ h3 {
 	}
 
 	#keterangan_modal {
-		margin-left: 8px;
+		width: 100%;
 	}
 
 	#atas_footer {
 		margin-top: 250px;
+	}
+
+	#loker h1 {
+		font-size: 26px;
+		text-align: justify;
+		width: 100%;
+		padding-right: 20px;
+		margin-top: 25px;
+	}
+
+	#loker p {
+		text-align: justify;
+		width: 100%;
 	}
 
 	#row_logo .col-lg-3 {
@@ -759,24 +781,34 @@ h3 {
 		position: relative;
 	}
 
+	/* footer */
 	footer {
-		height: 60px;
+		height: 80px;
 		position: relative;
 		top: 430px
 	}
 
-	.text_email {
-		margin-left: 44px;
+	footer .row .col-lg-6 .justify-content-end {
+		text-align: center;
+		position: relative;
+		left: 8px;
 	}
 
 	#pt_suryadi {
 		text-align: center;
 	}
 
+	/* halaman outlet */
+	#jumbotron_outlet img {
+		margin-top: 50px;
+	}
+
 	/* halaman menu */
 	#jumbotron_menu h3 {
-		margin-top: -120px;
-		font-size: 24px;
+		margin-top: -110px;
+		padding-top: 5px;
+		font-size: 20px;
+		padding-bottom: 5px;
 	}
 
 	#jumbotron_menu #slider_menu img {
@@ -945,6 +977,7 @@ h3 {
 		margin-bottom: -270px;
 	}
 
+
 	/* akhir halaman registrasi */
 
 	/* akhir media query smartphone */
@@ -968,7 +1001,7 @@ h3 {
 
 	#btn_login {
 		position: fixed;
-		left: 60px;
+		left: 75px;
 		top: 40px;
 		font-size: 18px;
 	}
@@ -985,10 +1018,6 @@ h3 {
 	#btn_login i {
 		visibility: hidden;
 	}
-
-	/* .btn_navbarNav {
-		position: fixed;
-	} */
 
 	#navbarNav {
 		margin-top: 50px;
@@ -1148,13 +1177,9 @@ h3 {
 	}
 
 	footer {
-		height: 70px;
+		height: 90px;
 		position: relative;
 		top: 430px;
-	}
-
-	.text_email {
-		margin-left: 30px;
 	}
 
 	#pt_suryadi {
