--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -577,11 +577,12 @@ h3 {
 	#home .navbar-brand {
 		font-size: 16px;
 		position: relative;
-		bottom: 10px;
+		top: 5px;
 		right: 18px;
 	}
 
 	#home button {
+		margin-top: 10px;
 		margin-left: 15px;
 	}
 
@@ -633,6 +634,7 @@ h3 {
 		left: 55%;
 		transform: translateX(-50%);
 	}
+
 
 	.carousel-inner .btn_carousel_daftar {
 		position: relative;
@@ -999,6 +1001,12 @@ h3 {
 		top: 10px
 	}
 
+	#home .btn_navbarNav {
+		font-size: 30px;
+		margin-right: 10px;
+
+	}
+
 	#btn_login {
 		position: fixed;
 		left: 75px;
@@ -1020,9 +1028,12 @@ h3 {
 	}
 
 	#navbarNav {
-		margin-top: 50px;
+		margin-top: 40px;
 		margin-left: 20px;
-		font-size: 20px;
+	}
+
+	#navbarNav a {
+		margin-top: -30px;
 	}
 
 	.garis_vertikal {
@@ -1108,17 +1119,24 @@ h3 {
 	}
 
 	.btn_rekomendasi {
-		width: 100%;
-		font-size: 12px;
+		width: 75px;
+		font-size: 16px;
+		position: absolute;
+		top: -30px;
+		height: 40px;
+		left: 0;
+		right: 0;
+		margin: auto;
 	}
 
 	.btn_rekomendasi:hover {
-		width: 100%;
-		height: 32px;
+		position: absolute;
+		width: 75px;
+		height: 40px;
+		padding-top: 9px;
+		font-size: 14px;
 		outline: none;
 		font-weight: lighter;
-		font-size: 10px;
-		padding-top: 8px;
 	}
 
 	.btn_menu {
@@ -1180,6 +1198,11 @@ h3 {
 		height: 90px;
 		position: relative;
 		top: 430px;
+	}
+
+	footer a {
+		position: relative;
+		left: 10px;
 	}
 
 	#pt_suryadi {
